--- a/package.json
+++ b/package.json
@@ -15,12 +15,19 @@
     "@angular/common": "~7.0.0",
     "@angular/compiler": "~7.0.0",
     "@angular/core": "~7.0.0",
+    "@angular/fire": "^5.1.0",
     "@angular/forms": "~7.0.0",
     "@angular/http": "~7.0.0",
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "firebase": "^5.5.8",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
+    "ngx-spinner": "^6.1.2",
+    "popper.js": "^1.14.4",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
